generator client {
  provider = "prisma-client-js"
}
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}
enum UserStatus {
  ACTIVE
  DISABLED
}
enum NotificationStatus {
  UNREAD
  READ
}
enum FileVisibility {
  PRIVATE
  PUBLIC
}
enum OrderStatus {
  PENDING
  PAID
  SHIPPED
  COMPLETED
  CANCELLED
}
model User {
  id           String       @id @default(uuid())
  email        String       @unique
  passwordHash String       @map("password_hash")
  fullName     String       @map("full_name")
  firstName    String?      @map("first_name")
  lastName     String?      @map("last_name")
  phone        String?
  isActive     Boolean      @default(true) @map("is_active")
  status       UserStatus   @default(ACTIVE)
  createdAt    DateTime     @default(now()) @map("created_at")
  updatedAt    DateTime     @updatedAt @map("updated_at")

  createdById  String?      @map("created_by")
  updatedById  String?      @map("updated_by")
  createdBy    User?        @relation("UserCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy    User?        @relation("UserUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdUsers User[]       @relation("UserCreatedBy")
  updatedUsers User[]       @relation("UserUpdatedBy")

  roles         UserRole[]
  refreshTokens RefreshToken[]
  auditLogs     AuditLog[]
  notifications Notification[]
  settings      Setting[]
  files         File[]

  rolesCreated               Role[]               @relation("RoleCreatedBy")
  rolesUpdated               Role[]               @relation("RoleUpdatedBy")
  permissionsCreated         Permission[]         @relation("PermissionCreatedBy")
  permissionsUpdated         Permission[]         @relation("PermissionUpdatedBy")
  userRolesCreated           UserRole[]           @relation("UserRoleCreatedBy")
  userRolesUpdated           UserRole[]           @relation("UserRoleUpdatedBy")
  rolePermissionsCreated     RolePermission[]     @relation("RolePermissionCreatedBy")
  rolePermissionsUpdated     RolePermission[]     @relation("RolePermissionUpdatedBy")
  refreshTokensCreated       RefreshToken[]       @relation("RefreshTokenCreatedBy")
  refreshTokensUpdated       RefreshToken[]       @relation("RefreshTokenUpdatedBy")
  auditLogsCreated           AuditLog[]           @relation("AuditLogCreatedBy")
  auditLogsUpdated           AuditLog[]           @relation("AuditLogUpdatedBy")
  notificationsCreated       Notification[]       @relation("NotificationCreatedBy")
  notificationsUpdated       Notification[]       @relation("NotificationUpdatedBy")
  settingsCreated            Setting[]            @relation("SettingCreatedBy")
  settingsUpdated            Setting[]            @relation("SettingUpdatedBy")
  filesCreated               File[]               @relation("FileCreatedBy")
  filesUpdated               File[]               @relation("FileUpdatedBy")
  productCategoriesCreated   ProductCategory[]    @relation("ProductCategoryCreatedBy")
  productCategoriesUpdated   ProductCategory[]    @relation("ProductCategoryUpdatedBy")
  productImagesCreated       ProductImage[]       @relation("ProductImageCreatedBy")
  productImagesUpdated       ProductImage[]       @relation("ProductImageUpdatedBy")
  inventoriesCreated         Inventory[]          @relation("InventoryCreatedBy")
  inventoriesUpdated         Inventory[]          @relation("InventoryUpdatedBy")
  addressesCreated           Address[]            @relation("AddressCreatedBy")
  addressesUpdated           Address[]            @relation("AddressUpdatedBy")
  cartsCreated               Cart[]               @relation("CartCreatedBy")
  cartsUpdated               Cart[]               @relation("CartUpdatedBy")
  cartItemsCreated           CartItem[]           @relation("CartItemCreatedBy")
  cartItemsUpdated           CartItem[]           @relation("CartItemUpdatedBy")
  shippingMethodsCreated     ShippingMethod[]     @relation("ShippingMethodCreatedBy")
  shippingMethodsUpdated     ShippingMethod[]     @relation("ShippingMethodUpdatedBy")
  orderItemsCreated          OrderItem[]          @relation("OrderItemCreatedBy")
  orderItemsUpdated          OrderItem[]          @relation("OrderItemUpdatedBy")
  paymentsCreated            Payment[]            @relation("PaymentCreatedBy")
  paymentsUpdated            Payment[]            @relation("PaymentUpdatedBy")
  orderStatusHistoriesCreated OrderStatusHistory[] @relation("OrderStatusHistoryCreatedBy")
  orderStatusHistoriesUpdated OrderStatusHistory[] @relation("OrderStatusHistoryUpdatedBy")

  productsCreated   Product[]  @relation("ProductCreatedBy")
  productsUpdated   Product[]  @relation("ProductUpdatedBy")
  ordersCreated     Order[]    @relation("OrderCreatedBy")
  ordersUpdated     Order[]    @relation("OrderUpdatedBy")
  categoriesCreated Category[] @relation("CategoryCreatedBy")
  categoriesUpdated Category[] @relation("CategoryUpdatedBy")
  customersCreated  Customer[] @relation("CustomerCreatedBy")
  customersUpdated  Customer[] @relation("CustomerUpdatedBy")
  discountsCreated  Discount[] @relation("DiscountCreatedBy")
  discountsUpdated  Discount[] @relation("DiscountUpdatedBy")
}



model Role {
  id          String           @id @default(uuid())
  name        String           @unique
  description String?
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")

  createdById String?          @map("created_by")
  updatedById String?          @map("updated_by")
  createdBy   User?            @relation("RoleCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?            @relation("RoleUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  users       UserRole[]
  permissions RolePermission[]

  @@index([createdById])
  @@index([updatedById])
}

model Permission {
  id          String           @id @default(uuid())
  key         String           @unique
  name        String?
  description String?
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")

  createdById String?          @map("created_by")
  updatedById String?          @map("updated_by")
  createdBy   User?            @relation("PermissionCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?            @relation("PermissionUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  roles       RolePermission[]

  @@index([createdById])
  @@index([updatedById])
}

model UserRole {
  id          String   @id @default(uuid())
  userId      String
  roleId      String
  assignedAt  DateTime @default(now()) @map("assigned_at")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("UserRoleCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("UserRoleUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@unique([userId, roleId])
  @@index([createdById])
  @@index([updatedById])
}

model RolePermission {
  id           String   @id @default(uuid())
  roleId       String
  permissionId String
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  createdById  String?  @map("created_by")
  updatedById  String?  @map("updated_by")
  createdBy    User?    @relation("RolePermissionCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy    User?    @relation("RolePermissionUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@unique([roleId, permissionId])
  @@index([createdById])
  @@index([updatedById])
}



model RefreshToken {
  id          String    @id @default(uuid())
  userId      String
  tokenHash   String
  expiresAt   DateTime
  revokedAt   DateTime?
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("RefreshTokenCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("RefreshTokenUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([createdById])
  @@index([updatedById])
}

model AuditLog {
  id          String   @id @default(uuid())
  userId      String?
  action      String
  entity      String?
  entityType  String?
  entityId    String?
  oldValue    Json?    @map("old_value")
  newValue    Json?    @map("new_value")
  ip          String?  @map("ip_address")
  userAgent   String?  @map("user_agent")
  meta        Json?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("AuditLogCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("AuditLogUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([createdById])
  @@index([updatedById])
}

model Notification {
  id        String             @id @default(uuid())
  userId    String
  type      String             @default("general")
  title     String
  message   String
  isRead    Boolean            @default(false) @map("is_read")
  status    NotificationStatus @default(UNREAD)
  createdAt DateTime           @default(now()) @map("created_at")
  updatedAt DateTime           @updatedAt @map("updated_at")
  readAt    DateTime?

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("NotificationCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("NotificationUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, status])
  @@index([createdById])
  @@index([updatedById])
}

model Setting {
  id          String   @id @default(uuid())
  userId      String?
  key         String
  value       String
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("SettingCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("SettingUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User? @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, key])
  @@index([createdById])
  @@index([updatedById])
}

model File {
  id          String         @id @default(uuid())
  userId      String?
  entity      String?
  entityId    String?        @map("entity_id")
  filename    String
  filePath    String?        @map("file_path")
  fileSize    Int?           @map("file_size")
  mimeType    String
  sizeBytes   Int
  storageKey  String         @unique
  uploadedBy  String?        @map("uploaded_by")
  visibility  FileVisibility @default(PRIVATE)
  createdAt   DateTime       @default(now()) @map("created_at")
  updatedAt   DateTime       @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("FileCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("FileUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([createdById])
  @@index([updatedById])
}


// produkte dhe porosit 


model Category {
  id        String   @id @default(uuid())
  name      String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String?
  updatedById String?
  createdBy User? @relation("CategoryCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy User? @relation("CategoryUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  products ProductCategory[]
}

model Product {
  id          String   @id @default(uuid())
  sku         String   @unique
  name        String
  description String?
  priceCents  Int
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String?
  updatedById String?
  createdBy User? @relation("ProductCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy User? @relation("ProductUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  categories ProductCategory[]
  images     ProductImage[]
  inventory  Inventory?
  orderItems OrderItem[]
  cartItems  CartItem[]
}

model ProductCategory {
  productId  String
  categoryId String

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("ProductCategoryCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("ProductCategoryUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  product  Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([productId, categoryId])
  @@index([createdById])
  @@index([updatedById])
}

model ProductImage {
  id        String   @id @default(uuid())
  productId String
  url       String
  sortOrder Int      @default(0)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("ProductImageCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("ProductImageUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId, sortOrder])
  @@index([createdById])
  @@index([updatedById])
}

model Inventory {
  productId   String   @id
  quantity    Int      @default(0)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("InventoryCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("InventoryUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([createdById])
  @@index([updatedById])
}


model Customer {
  id        String   @id @default(uuid())
  email     String   @unique
  fullName  String
  phone     String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String?
  updatedById String?
  createdBy User? @relation("CustomerCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy User? @relation("CustomerUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  addresses Address[]
  carts     Cart[]
  orders    Order[]
}

model Address {
  id         String   @id @default(uuid())
  customerId String
  line1      String
  line2      String?
  city       String
  postalCode String?
  country    String
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("AddressCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("AddressUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  customer Customer @relation(fields: [customerId], references: [id], onDelete: Cascade)
  orders   Order[]

  @@index([customerId])
  @@index([createdById])
  @@index([updatedById])
}

model Cart {
  id         String   @id @default(uuid())
  customerId String
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("CartCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("CartUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  customer Customer  @relation(fields: [customerId], references: [id], onDelete: Cascade)
  items    CartItem[]

  @@index([customerId])
  @@index([createdById])
  @@index([updatedById])
}

model CartItem {
  cartId    String
  productId String
  quantity  Int    @default(1)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("CartItemCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("CartItemUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  cart    Cart    @relation(fields: [cartId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@id([cartId, productId])
  @@index([createdById])
  @@index([updatedById])
}


model ShippingMethod {
  id         String   @id @default(uuid())
  name       String   @unique
  priceCents Int      @default(0)
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("ShippingMethodCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("ShippingMethodUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  orders Order[]

  @@index([createdById])
  @@index([updatedById])
}

model Discount {
  id             String    @id @default(uuid())
  code           String    @unique
  percentOff     Int?
  amountOffCents Int?
  startsAt       DateTime?
  endsAt         DateTime?
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")

  createdById String?
  updatedById String?
  createdBy User? @relation("DiscountCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy User? @relation("DiscountUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  orders Order[]
}

model Order {
  id               String      @id @default(uuid())
  customerId       String
  addressId        String?
  shippingMethodId String?
  discountId       String?
  status           OrderStatus @default(PENDING)
  subtotalCents    Int         @default(0)
  shippingCents    Int         @default(0)
  discountCents    Int         @default(0)
  totalCents       Int         @default(0)
  isSeen           Boolean     @default(false) @map("is_seen")
  seenAt           DateTime?   @map("seen_at")
  seenBy           String?     @map("seen_by")
  createdAt        DateTime    @default(now()) @map("created_at")
  updatedAt        DateTime    @updatedAt @map("updated_at")

  createdById String?
  updatedById String?
  createdBy User? @relation("OrderCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy User? @relation("OrderUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  customer       Customer        @relation(fields: [customerId], references: [id], onDelete: Cascade)
  address        Address?        @relation(fields: [addressId], references: [id], onDelete: SetNull)
  shippingMethod ShippingMethod? @relation(fields: [shippingMethodId], references: [id], onDelete: SetNull)
  discount       Discount?       @relation(fields: [discountId], references: [id], onDelete: SetNull)

  items         OrderItem[]
  payments      Payment[]
  statusHistory OrderStatusHistory[]

  @@index([customerId, createdAt])
}

model OrderItem {
  id            String   @id @default(uuid())
  orderId       String
  productId     String
  quantity      Int
  unitPriceCents Int

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("OrderItemCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("OrderItemUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([orderId])
  @@index([createdById])
  @@index([updatedById])
}

model Payment {
  id          String   @id @default(uuid())
  orderId     String
  provider    String
  status      String
  amountCents Int
  externalRef String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("PaymentCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("PaymentUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([createdById])
  @@index([updatedById])
}

model OrderStatusHistory {
  id        String      @id @default(uuid())
  orderId   String
  status    OrderStatus
  note      String?
  createdAt DateTime    @default(now()) @map("created_at")
  updatedAt DateTime    @updatedAt @map("updated_at")

  createdById String? @map("created_by")
  updatedById String? @map("updated_by")
  createdBy   User?   @relation("OrderStatusHistoryCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("OrderStatusHistoryUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId, createdAt])
  @@index([createdById])
  @@index([updatedById])
}


model SupportSession {
  id             String    @id @default(uuid())
  customerUserId String?
  customerEmail  String?
  customerName   String
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")
  createdById    String?   @map("created_by")
  updatedById    String?   @map("updated_by")

  messages SupportMessage[]

  @@index([customerUserId])
  @@index([customerEmail])
}

model SupportMessage {
  id          String    @id @default(uuid())
  sessionId   String
  from        String
  senderName  String
  text        String
  messageType String    @default("normal") @map("message_type")
  isRead      Boolean   @default(false) @map("is_read")
  readAt      DateTime? @map("read_at")
  readBy      String?   @map("read_by")
  status      String    @default("unread")
  isReplied   Boolean   @default(false) @map("is_replied")
  repliedAt   DateTime? @map("replied_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  createdById String?   @map("created_by")
  updatedById String?   @map("updated_by")

  session SupportSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, createdAt])
}
