erDiagram
  %% ===== AUTH & AUTHORIZATION =====
  User {
    uuid   id           PK
    string email        UK
    string password_hash
    string full_name
    string first_name
    string last_name
    bool   is_active
    enum   status
    ts     created_at
    ts     updated_at
    uuid   created_by   FK
    uuid   updated_by   FK
  }

  Role {
    uuid   id          PK
    string name        UK
    string description
    ts     created_at
    ts     updated_at
  }

  UserRole {
    uuid   userId      FK
    uuid   roleId      FK
    ts     assigned_at
    ts     created_at
    uuid   created_by  FK
  }

  Permission {
    uuid   id          PK
    string key         UK
    string name
    string description
    ts     created_at
  }

  RolePermission {
    uuid   roleId       FK
    uuid   permissionId FK
    ts     created_at
  }

  RefreshToken {
    uuid   id          PK
    uuid   user_id     FK
    string token_hash
    ts     expires_at
    ts     revoked_at
    ts     created_at
  }

  AuditLog {
    uuid   id          PK
    uuid   user_id     FK
    string action
    string entity
    string entityType
    uuid   entity_id
    json   old_value
    json   new_value
    string ip_address
    string user_agent
    json   meta
    ts     created_at
  }

  Notification {
    uuid   id          PK
    uuid   user_id     FK
    string type
    string title
    string message
    bool   is_read
    enum   status
    ts     read_at
    ts     created_at
    ts     updated_at
  }

  Setting {
    uuid   id          PK
    uuid   userId      FK "nullable – NULL=global"
    string key
    string value
    string description
    ts     updated_at
  }

  File {
    uuid   id          PK
    uuid   userId      FK
    string entity
    uuid   entity_id
    string filename
    string file_path
    int    file_size
    string mime_type
    int    size_bytes
    string storage_key UK
    string uploaded_by
    enum   visibility
    ts     created_at
  }

  %% ===== E-COMMERCE DOMAIN =====
  Category {
    uuid   id     PK
    string name   UK
    ts     created_at
  }

  Product {
    uuid   id           PK
    string sku          UK
    string name
    string description
    int    price_cents
    bool   is_active
    ts     created_at
    ts     updated_at
    uuid   created_by   FK
    uuid   updated_by   FK
  }

  ProductCategory {
    uuid   productId   FK
    uuid   categoryId  FK
  }

  ProductImage {
    uuid   id          PK
    uuid   productId   FK
    string url
    int    sort_order
    ts     created_at
  }

  Inventory {
    uuid   productId   PK "FK"
    int    quantity
    ts     updated_at
  }

  Customer {
    uuid   id        PK
    string email     UK
    string full_name
    string phone
    ts     created_at
    ts     updated_at
  }

  Address {
    uuid   id          PK
    uuid   customerId  FK
    string line1
    string line2
    string city
    string postal_code
    string country
    ts     created_at
  }

  Cart {
    uuid   id          PK
    uuid   customerId  FK
    ts     created_at
    ts     updated_at
  }

  CartItem {
    uuid   cartId     FK
    uuid   productId  FK
    int    quantity
    ts     created_at
  }

  ShippingMethod {
    uuid   id          PK
    string name        UK
    int    price_cents
    ts     created_at
  }

  Discount {
    uuid   id              PK
    string code            UK
    int    percent_off
    int    amount_off_cents
    ts     starts_at
    ts     ends_at
    ts     created_at
  }

  Order {
    uuid   id                PK
    uuid   customerId        FK
    uuid   addressId         FK
    uuid   shippingMethodId  FK
    uuid   discountId        FK
    enum   status
    int    subtotal_cents
    int    shipping_cents
    int    discount_cents
    int    total_cents
    bool   is_seen
    ts     seen_at
    uuid   seen_by
    ts     created_at
    ts     updated_at
    uuid   created_by        FK
    uuid   updated_by        FK
  }

  OrderItem {
    uuid   id              PK
    uuid   orderId         FK
    uuid   productId       FK
    int    quantity
    int    unit_price_cents
    ts     created_at
  }

  Payment {
    uuid   id           PK
    uuid   orderId      FK
    string provider
    string status
    int    amount_cents
    string external_ref
    ts     created_at
    ts     updated_at
  }

  OrderStatusHistory {
    uuid   id       PK
    uuid   orderId  FK
    enum   status
    string note
    ts     created_at
  }

  %% ===== REAL-TIME SUPPORT CHAT =====
  SupportSession {
    uuid   id               PK
    uuid   customerUserId   FK "nullable"
    string customerEmail
    string customerName
    ts     created_at
    ts     updated_at
    uuid   created_by       FK "nullable"
    uuid   updated_by       FK "nullable"
  }

  SupportMessage {
    uuid   id           PK
    uuid   sessionId    FK
    string from
    string sender_name
    string text
    string message_type
    bool   is_read
    ts     read_at
    uuid   read_by
    string status
    bool   is_replied
    ts     replied_at
    ts     created_at
    ts     updated_at
    uuid   created_by   FK "nullable"
    uuid   updated_by   FK "nullable"
  }

  %% ===== RELATIONSHIPS =====
  User ||--o{ UserRole          : "ka role"
  Role ||--o{ UserRole          : "caktohet"
  Role ||--o{ RolePermission    : "ka leje"
  Permission ||--o{ RolePermission : "i takon"
  User ||--o{ RefreshToken      : "ka token"
  User ||--o{ AuditLog          : "shkruan"
  User ||--o{ Notification      : "merr"
  User ||--o{ Setting           : "ka settings"
  User ||--o{ File              : "ngarkon"

  Category ||--o{ ProductCategory  : "grupon"
  Product  ||--o{ ProductCategory  : "kategorohet"
  Product  ||--o{ ProductImage     : "ka imazhe"
  Product  ||--|| Inventory        : "ka stok"
  Product  ||--o{ CartItem         : "në kart"
  Product  ||--o{ OrderItem        : "porositur"

  Customer ||--o{ Address          : "ka adresa"
  Customer ||--o{ Cart             : "ka kart"
  Customer ||--o{ Order            : "bën porosi"
  Cart     ||--o{ CartItem         : "permban"

  Order ||--o{ OrderItem           : "permban"
  Order ||--o{ Payment             : "paguhet"
  Order ||--o{ OrderStatusHistory  : "ndryshon status"
  ShippingMethod ||--o{ Order      : "perdoret"
  Discount       ||--o{ Order      : "aplikohet"

  SupportSession  ||--o{ SupportMessage : "ka mesazhe"

  %% Audit trails (created_by / updated_by → User)
  User ||--o{ Product            : "krijon/modifikon"
  User ||--o{ Order              : "krijon/modifikon"
  User ||--o{ Category           : "krijon/modifikon"
  User ||--o{ Customer           : "krijon/modifikon"
  User ||--o{ Discount           : "krijon/modifikon"
